syntax = "proto3";

package api.common;

option go_package = "api_gateway_service/api/common;common";
option java_multiple_files = true;
option java_package = "api.common";
option objc_class_prefix = "ApiCommon";

import "google/protobuf/any.proto";

message Res {
  uint32 code = 1;
  string msg = 2;
  google.protobuf.Any data = 3;
  //  uint64 ts = 4;
}

message UserAccount {
  uint64 id = 1;
  string usr = 2;
  string pwd = 3;
  string sec_pwd = 4;
  string mobile = 5;
  string email = 6;
  string lang = 7;
  string timezone = 8;
  string real_name = 9;
  string id_no = 10;
  string currency = 11;
  bool is_google_auth = 12;
  string google_auth = 13;
  string device_id = 14;
  bool is_allowed_msg = 15;
  bool is_allowed_email = 16;
  uint32 msg_type = 17;
  bool is_real_auth = 18;
  bool is_added_bankcard = 19;
  uint32 security_level = 20;
  bool is_unread_notice = 21;
  bool is_coupon = 22;
  uint32 status = 23;
  string created_at = 24;
  string updated_at = 25;
  string deleted_at = 26;
}
